--- a/index.html
+++ b/index.html
@@ -54,9 +54,14 @@
   <div class="apps">
     <a href="POSMOVIL/index.html">🔎 POS MOVIL</a>
   </div>
+
   <div class="apps">
     <a href="POSMOVIL/cortes_pendientes.html">🔎 Usuarios con Corte Pendiente</a>
   </div>
+  <div class="apps">
+    <a href="POSMOVIL/RECORTES.html">🔎 Reimpresion de Cortes</a>
+  </div>
+
   <footer>
     Powered by <b>PROVSOFT</b>
   </footer>
