--- a/POSMOVIL/cortes_pendientes.html
+++ b/POSMOVIL/cortes_pendientes.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8" />
   <title>Cortes Pendientes – PROVSOFT</title>
-  <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#0c6cbd">
   <style>
     body {
@@ -74,7 +73,7 @@
   </tbody>
 </table>
 
-<!-- Modal resumen antes de confirmar corte -->
+<!-- Modal resumen -->
 <div id="modalResumen">
   <div class="modal-card">
     <h2>Resumen de Corte</h2>
@@ -93,7 +92,6 @@ import {
 } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
 document.addEventListener("DOMContentLoaded", async () => {
-  // 🔹 Configuración Firebase
   const firebaseConfig = {
     apiKey: "AIzaSyCK5nb6u2CGRJ8AB1aPlRn54b97bdeAFeM",
     authDomain: "inventariopv-643f1.firebaseapp.com",
@@ -113,63 +111,55 @@ document.addEventListener("DOMContentLoaded", async () => {
   const btnConfirmar = document.getElementById("btnConfirmar");
 
   let corteActual = null;
+  let mapaDepartamentos = {};
 
-  // 🔹 Cargar rutas únicas desde rutas_venta
+  // 🔹 Cargar departamentos (catálogo)
+  async function cargarDepartamentos() {
+    const depSnap = await getDocs(collection(db, "departamentos_venta"));
+    depSnap.forEach(d => {
+      const data = d.data();
+      mapaDepartamentos[data.id?.toString()] = data;
+    });
+  }
+
+  // 🔹 Cargar rutas únicas
   async function cargarRutas() {
     const snap = await getDocs(collection(db, "rutas_venta"));
     const rutas = new Map();
-
     snap.forEach(d => {
       const v = d.data();
-      if (v.rutaId) {
-        rutas.set(v.rutaId, v.atendio || v.usuarioNombre || "Desconocido");
-      }
+      if (v.rutaId) rutas.set(v.rutaId, v.atendio || v.usuario || "Desconocido");
     });
-
-    if (rutas.size === 0) {
+    rutas.forEach((nombre, id) => {
       const opt = document.createElement("option");
-      opt.value = "AdministradorGeneral";
-      opt.textContent = "GERARDO RIOS QUEZADA – AdministradorGeneral";
+      opt.value = id;
+      opt.textContent = `${nombre} – ${id}`;
       selectRuta.appendChild(opt);
-    } else {
-      rutas.forEach((nombre, id) => {
-        const opt = document.createElement("option");
-        opt.value = id;
-        opt.textContent = `${nombre} – ${id}`;
-        selectRuta.appendChild(opt);
-      });
-    }
+    });
   }
 
-  // 🔹 Cargar pendientes del día filtrando por rutaId
   async function cargarPendientes(rutaId) {
     tbody.innerHTML = "<tr><td colspan='5'>Buscando ventas...</td></tr>";
-
     const qVentas = query(collection(db, "rutas_venta"), where("rutaId", "==", rutaId), where("cortado", "==", false));
     const snap = await getDocs(qVentas);
     const ventas = snap.docs.map(d => ({ id: d.id, ...d.data() }));
-
     if (ventas.length === 0) {
       tbody.innerHTML = "<tr><td colspan='5' style='text-align:center;color:#999;'>No hay cortes pendientes</td></tr>";
       return;
     }
-
-    const totalHoy = ventas.reduce((acc, v) => acc + (v.total || 0), 0);
-    const ultimaVenta = ventas.sort((a, b) => (b.fecha_txt || '').localeCompare(a.fecha_txt || ''))[0]?.fecha_txt || "—";
-
+    const totalHoy = ventas.reduce((a, v) => a + (v.total || 0), 0);
+    const ultima = ventas.sort((a,b)=> (b.fecha_txt||'').localeCompare(a.fecha_txt||''))[0]?.fecha_txt || "—";
     tbody.innerHTML = `
       <tr>
-        <td>${ventas[0].atendio || "—"}</td>
+        <td>${ventas[0].atendio || ventas[0].usuario || "—"}</td>
         <td>${rutaId}</td>
         <td>$${totalHoy.toFixed(2)}</td>
-        <td>${ultimaVenta}</td>
+        <td>${ultima}</td>
         <td><button data-ruta="${rutaId}">📊 Hacer Corte</button></td>
-      </tr>
-    `;
+      </tr>`;
   }
 
-  // 🔹 Evento: cambio en el selector
-  selectRuta.addEventListener("change", (e) => {
+  selectRuta.addEventListener("change", e => {
     const rutaId = e.target.value;
     if (!rutaId) {
       tbody.innerHTML = "<tr><td colspan='5' style='text-align:center;color:#999;'>Selecciona una ruta</td></tr>";
@@ -178,8 +168,7 @@ document.addEventListener("DOMContentLoaded", async () => {
     cargarPendientes(rutaId);
   });
 
-  // 🔹 Al hacer clic en “Hacer Corte”
-  tbody.addEventListener("click", async (e) => {
+  tbody.addEventListener("click", async e => {
     const btn = e.target.closest("button[data-ruta]");
     if (!btn) return;
     const rutaId = btn.getAttribute("data-ruta");
@@ -187,47 +176,34 @@ document.addEventListener("DOMContentLoaded", async () => {
     await mostrarResumenCorte(rutaId);
   });
 
-  btnCancelar.onclick = () => {
-    modal.style.display = "none";
-    corteActual = null;
-  };
+  btnCancelar.onclick = () => (modal.style.display = "none");
 
-  // 🔹 Confirmar corte
   btnConfirmar.onclick = async () => {
     if (!corteActual) return;
     const { rutaId, resumen } = corteActual;
     btnConfirmar.disabled = true;
     btnConfirmar.textContent = "Cortando...";
 
-    // Marcar ventas como cortadas
     const qVentas = query(collection(db, "rutas_venta"), where("rutaId", "==", rutaId), where("cortado", "==", false));
     const snap = await getDocs(qVentas);
+    for (const d of snap.docs) await updateDoc(doc(db, "rutas_venta", d.id), { cortado: true });
 
-    for (const docu of snap.docs) {
-      await updateDoc(doc(db, "rutas_venta", docu.id), { cortado: true });
-    }
+    const corteRef = await addDoc(collection(db, "cortes_globales"), {
+      rutaId,
+      fecha: serverTimestamp(),
+      resumen,
+      realizado_por: "Administrador"
+    });
 
-// Registrar corte global y obtener ID
-const corteRef = await addDoc(collection(db, "cortes_globales"), {
-  rutaId,
-  fecha: serverTimestamp(),
-  resumen: resumen || {},
-  realizado_por: "Administrador"
-});
+    const url = `reporte_corte.html?corteId=${corteRef.id}`;
+    window.open(url, "_blank");
 
-// Abrir el nuevo reporte con corteId
-const corteId = corteRef.id;
-const url = `reporte_corte.html?corteId=${corteId}`;
-window.open(url, "_blank");
-
-
-    alert("✅ Corte realizado y reporte generado");
+    alert("✅ Corte realizado y reporte generado correctamente");
     modal.style.display = "none";
     selectRuta.value = "";
     tbody.innerHTML = "<tr><td colspan='5'>Selecciona una ruta...</td></tr>";
   };
 
-  // 🔹 Mostrar resumen antes de confirmar
   async function mostrarResumenCorte(rutaId) {
     contenido.innerHTML = "Generando resumen...";
     modal.style.display = "flex";
@@ -238,39 +214,41 @@ window.open(url, "_blank");
 
     const porMetodo = {}, porDepto = {};
     let totalDia = 0;
+
     for (const v of ventas) {
       totalDia += v.total || 0;
       const metodo = v.metodo_pago || "otro";
       porMetodo[metodo] = (porMetodo[metodo] || 0) + (v.total || 0);
 
       for (const det of (v.detalle || [])) {
-        const dep = det.departamento || "General";
-        porDepto[dep] = (porDepto[dep] || 0) + (det.importe || 0);
+        const depId = det.departamento_id?.toString() || "0";
+        const depInfo = mapaDepartamentos[depId] || { nombre: "SIN DEPARTAMENTO" };
+        const depNombre = depInfo.nombre;
+        const importe = det.importe || (det.precioVenta * det.cantidad) || 0;
+        porDepto[depNombre] = (porDepto[depNombre] || 0) + importe;
       }
     }
 
     const totalTickets = ventas.length;
     const totalEfectivo = porMetodo.efectivo || 0;
-    const totalCredito  = porMetodo.tarjeta || 0;
-    corteActual.resumen = { totalDia, porMetodo, porDepto, totalTickets, totalEfectivo, totalCredito };
+    const totalCredito = porMetodo.tarjeta || 0;
+    corteActual.resumen = { totalDia, totalTickets, totalEfectivo, totalCredito, porMetodo, porDepto };
 
     let html = `<h3>Total del día: $${totalDia.toFixed(2)}</h3>`;
     html += `<p>Tickets: ${totalTickets}</p>`;
     html += "<h4>Por Departamento</h4><table><tbody>";
-    for (const [dep, val] of Object.entries(porDepto)) {
+    for (const [dep, val] of Object.entries(porDepto))
       html += `<tr><td>${dep}</td><td style='text-align:right;'>$${val.toFixed(2)}</td></tr>`;
-    }
     html += "</tbody></table><h4>Métodos de Pago</h4><table><tbody>";
-    for (const [met, val] of Object.entries(porMetodo)) {
+    for (const [met, val] of Object.entries(porMetodo))
       html += `<tr><td>${met}</td><td style='text-align:right;'>$${val.toFixed(2)}</td></tr>`;
-    }
     html += "</tbody></table>";
 
     contenido.innerHTML = html;
   }
 
-  // 🔹 Inicia todo
-  cargarRutas();
+  await cargarDepartamentos();
+  await cargarRutas();
 });
 </script>
 </body>
