--- a/POSMOVIL/index.html
+++ b/POSMOVIL/index.html
@@ -330,8 +330,10 @@ enableIndexedDbPersistence(db).catch(err => {
       rutaId = data.rutaId; // ruta depende del usuario
       $("#loginScreen").style.display="none"; $("#posApp").style.display="block";
       await cargarCatalogoDesdeFirestore();
+      await cargarDepartamentos(); // 👈 NUEVA LÍNEA
       render();
       await sincronizarVentasPendientes();
+      
       // 🔹 Guardar sesión en localStorage
 localStorage.setItem("usuario_ruta", JSON.stringify(USUARIO_LOGUEADO));
 
@@ -495,14 +497,15 @@ async function cargarCatalogoDesdeFirestore(){
     prodSnap.forEach(d => {
       const x = d.data();
       if (x.activo === false) return;
-      const prod = {
-        id: d.id,
-        nombre: x.concepto || 'SIN NOMBRE',
-        codigo: (x.codigoBarra || '').toString(),
-        precioPublico: Number(x.precioPublico || 0),
-        ivaTasa: Number(x.ivaTasa || 0),
-        iepsTasa: Number(x.iepsTasa || 0)
-      };
+const prod = {
+  id: d.id,
+  nombre: x.concepto || 'SIN NOMBRE',
+  codigo: (x.codigoBarra || '').toString(),
+  precioPublico: Number(x.precioPublico || 0),
+  ivaTasa: Number(x.ivaTasa || 0),
+  iepsTasa: Number(x.iepsTasa || 0),
+  departamento_id: x.departamento_id || null  // 👈 mantén solo este
+};
       catalogo.push(prod);
       if (prod.codigo) codeIndex.set(prod.codigo.trim(), prod.id);
     });
@@ -514,6 +517,23 @@ async function cargarCatalogoDesdeFirestore(){
     console.error("❌ Error cargando catálogo:", err);
   }
 }
+
+let departamentos = {};
+
+async function cargarDepartamentos() {
+  const snap = await getDocs(collection(db, "departamentos_venta"));
+  snap.forEach(d => {
+    const data = d.data();
+    departamentos[d.id] = {
+      id: Number(data.id || d.id),
+      nombre: data.nombre || "SIN DEPARTAMENTO",
+      iva: Number(data.iva || 0),
+      ieps: Number(data.ieps || 0)
+    };
+  });
+  console.log("📂 Departamentos cargados:", Object.keys(departamentos).length);
+}
+
 
 // ==== Autocompletado de Clientes con caché ====
 const cacheClientes = new Map();
@@ -753,14 +773,19 @@ const venta = {
   total,
   notas,
   cortado: false,
-  detalle: carrito.map(it => ({
+detalle: carrito.map(it => {
+  const depId = it.departamento_id?.toString() || "0";
+  const depInfo = departamentos[depId] || { nombre: "SIN DEPARTAMENTO", iva: 0, ieps: 0 };
+  return {
     id: it.id,
     nombre: it.nombre,
     cantidad: it.cantidad,
     precio_unit: it.precioUnit,
-    importe: it.importe
-  }))
-};
+    importe: it.importe,
+    departamento_id: depId,
+    departamento_info: depInfo
+  };
+})
 
       const docId = await guardarVentaEnFirestore(venta);
       rellenarTicket({...venta,fecha:fecha}); imprimirTicketEstilado();
