--- a/POSMOVIL/index.html
+++ b/POSMOVIL/index.html
@@ -659,20 +659,21 @@ async function buscarClientesFirestore(texto){
     }
   });
 function calcularTotalesConImpuestosIncluidos() {
-  let subtotal = 0, impuestos = 0, total = 0;
+  let subtotal = 0, totalIva = 0, totalIeps = 0, total = 0;
 
+  // 🔹 Cada producto del carrito
   carrito.forEach(it => {
     const imp = it.cantidad * it.precioUnit;
     let base = imp;
     let iva = 0, ieps = 0;
 
-    // 🧠 Obtener tasas del departamento (conversión a porcentaje)
+    // 🧠 Tasas desde el departamento (convertidas a fracción)
     const depId = it.departamento_id?.toString() || "0";
     const depInfo = departamentos[depId] || { iva: 0, ieps: 0 };
     const ivaTasa = Number(depInfo.iva || it.ivaTasa || 0) / 100;
     const iepsTasa = Number(depInfo.ieps || it.iepsTasa || 0) / 100;
 
-    // 🧾 Si el precio ya incluye impuestos, desglosar correctamente
+    // 🧾 Desglose según impuestos incluidos
     if (iepsTasa > 0 && ivaTasa > 0) {
       base = imp / (1 + iepsTasa + ivaTasa * (1 + iepsTasa));
       ieps = base * iepsTasa;
@@ -684,18 +685,34 @@ function calcularTotalesConImpuestosIncluidos() {
       base = imp / (1 + ivaTasa);
       iva = base * ivaTasa;
     } else {
-      base = imp; // producto exento
+      base = imp; // exento
     }
 
+    // 📊 Guardar desglose por producto
+    it._desglose = {
+      base: +base.toFixed(2),
+      ieps: +ieps.toFixed(2),
+      iva: +iva.toFixed(2),
+      total: +imp.toFixed(2),
+      ivaTasa: +(ivaTasa * 100),
+      iepsTasa: +(iepsTasa * 100)
+    };
+
     subtotal += base;
-    impuestos += iva + ieps;
+    totalIva += iva;
+    totalIeps += ieps;
     total += imp;
   });
 
+  const impuestos = totalIva + totalIeps;
+
+  // 📦 Resultado global
   return {
     subtotal: +subtotal.toFixed(2),
     impuestos: +impuestos.toFixed(2),
-    total: +total.toFixed(2)
+    total: +total.toFixed(2),
+    totalIva: +totalIva.toFixed(2),
+    totalIeps: +totalIeps.toFixed(2)
   };
 }
 
